--- a/Birthday/Gemfile
+++ b/Birthday/Gemfile
@@ -7,3 +7,5 @@ git_source(:github) {|repo_name| "https://github.com/#{repo_name}" }
 gem "rspec"
 gem "sinatra"
 gem 'capybara'
+gem 'rb-readline'
+gem 'time_difference'
